Adding shaarli to user config

--- a/shaarli/tpl_planetlibre/page.header.html
+++ b/shaarli/tpl_planetlibre/page.header.html
@@ -1,5 +1,5 @@
 
-    <div id="logo" title="Share your links !" onclick="document.location='?';"></div>
+	<div id="logo" title="Share your links !" onclick="document.location='{$planet_url}';"></div>
     <div style="float:right; font-style:italic; color:#bbb; text-align:right; padding:0 5 0 0;" class="nomobile">Shaare your links...<br>{$linkcount} links</div>
     <span id="shaarli_title"><a href="?">{$shaarlititle}</a></span>
 
