Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Bilboplanet by theclimber</title>
-    
+
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <script src="javascripts/scale.fix.js"></script>
@@ -16,49 +16,59 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Bilboplanet</h1>
-        <p>Open-source planet framework blog-agregator in PHP</p>
-        <p class="view"><a href="https://github.com/theclimber/Bilboplanet">View the Project on GitHub <small>theclimber/Bilboplanet</small></a></p>
+        <h1 class="header">Bilboplanet</h1>
+        <p class="header">Open-source planet framework blog-agregator in PHP</p>
+
         <ul>
-          <li><a href="https://github.com/theclimber/Bilboplanet/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/theclimber/Bilboplanet/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/theclimber/Bilboplanet">Fork On <strong>GitHub</strong></a></li>
+          <li class="download"><a class="buttons" href="https://github.com/theclimber/Bilboplanet/zipball/master">Download ZIP</a></li>
+          <li class="download"><a class="buttons" href="https://github.com/theclimber/Bilboplanet/tarball/master">Download TAR</a></li>
+          <li><a class="buttons github" href="https://github.com/theclimber/Bilboplanet">View On GitHub</a></li>
         </ul>
+
+        <p class="header">This project is maintained by <a class="header name" href="https://github.com/theclimber">theclimber</a></p>
+
+
       </header>
       <section>
-        <h3>Welcome to Bilboplanet.</h3>
+        <h3>
+<a name="welcome-to-bilboplanet" class="anchor" href="#welcome-to-bilboplanet"><span class="octicon octicon-link"></span></a>Welcome to Bilboplanet.</h3>
 
 <p>In online media, Planet is a feed aggregator application designed to collect posts from the weblogs of members of an Internet community and display them on a single page. Planet runs on a web server. It creates pages with entries from the original feeds in chronological order, most recent entries first.</p>
 
 <p>Websites that aggregate posts from different blogs using Planet or similar software are known as planets themselves. Such sites are commonly associated with free and open source software projects, where they are used to collect posts from the various developers involved in projects.</p>
 
-<pre><code>
-$ cd your_dev_folder
-$ git clone https://github.com/YOUR_USERNAME/Bilboplanet.git
-$ cd bilboplanet
-$ git checkout -b myNewBranch # create your own development branch
-$ vim index.php
-... do some work
-$ git add index.php
-$ git commit
-$ git push origin myNewBranch # push your development branch on your remote
+<pre><code>$ cd your_repo_root/repo_name
+$ git fetch origin
+$ git checkout bilboplanet
 </code></pre>
 
 <p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
 
-<h3>Authors and Contributors</h3>
+<h3>
+<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
-<p>We are a small team working on the project and always looking for your contribution with bug-reports, quick fixes or event features-requests and well coded features. <a href="/theclimber" class="user-mention">@theclimber</a> and <a href="/Guiona" class="user-mention">@Guiona</a> are the two main developer of the project. Feel free to contact us if you encounter any problems regarding the Bilboplanet</p>
+<p>We are a small team working on the project and always looking for your contribution with bug-reports, quick fixes or event features-requests and well coded features. <a href="https://github.com/theClimber" class="user-mention">@theClimber</a> and <a href="https://github.com/Guiona" class="user-mention">@Guiona</a> are the two main developer of the project. Feel free to contact us if you encounter any problems regarding the Bilboplanet</p>
 
-<h3>Support or Contact</h3>
+<h3>
+<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
 <p>Having trouble with the Bilboplanet? Check out the documentation on our website at <a href="http://bilboplanet.com">http://bilboplanet.com</a> or contact dev [at] bilboplanet.com and we’ll help you sort it out.</p>
       </section>
       <footer>
-        <p>This project is maintained by <a href="https://github.com/theclimber">theclimber</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <p><small>Hosted on <a href="http://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
       </footer>
     </div>
-    <!--[if !IE]><script>fixScale(document);</script><!--<![endif]-->
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+		          <script type="text/javascript">
+            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+          </script>
+          <script type="text/javascript">
+            try {
+              var pageTracker = _gat._getTracker("UA-11335651-1");
+            pageTracker._trackPageview();
+            } catch(err) {}
+          </script>
+
   </body>
 </html>
